# keylight-cli

./: Cargo.toml  README.md  com.keylight.daemon.plist  com.keylight.task.plist  onair.sh
.github/workflows/: build-ci.yml  matrix.yml  release.yml
src/: cli.rs  main.rs
